user service with jwt implementation
